# llmtracer

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
example/: simple_example.json  simple_example.py
llmtracer/: __init__.py  convenience.py  frame_info.py  module_filtering.py  object_converter.py  trace_builder.py  trace_schema.py  wandb_integration.py
llmtracer/handlers/: __init__.py  json_writer.py  svg_writer.py  trace_viewer.py
llmtracer/testing/collections/: __init__.py  mutable_mapping.py  mutable_set.py
llmtracer/testing/collections/tests/: test_mutable_mapping_tests.py  test_mutable_set_tests.py
llmtracer/tests/: __init__.py  integration_test_wandb.py  test_object_converter.py  test_trace_builder.py
llmtracer/tools/trace_viewer/: .gitignore  app_runner.py  optimization_unit_trace_example.json  pcconfig.py  rxconfig.py
llmtracer/tools/trace_viewer/app/: app.py  endpoint_integration.py  flame_graph.py  json_view.py  pcconfig.py
llmtracer/tools/trace_viewer/assets/: react-json-view-lite.css
llmtracer/utils/: callable_wrapper.py  stopwatch_context.py  weakrefs.py
llmtracer/utils/tests/: test_callable_wrapper.py  test_weakrefs.py
tests/: test_dummy.py
